# kalinka_printer

./: .gitignore  manage.py  pyproject.toml
kalinka_printer/: asgi.py  settings.py  urls.py  wsgi.py
printer/: admin.py  convert.py  models.py
printer/migrations/: 0001_initial.py  0002_alter_document_file_pdf_alter_document_mono_and_more.py  0003_remove_document_file_org_remove_document_file_pdf_and_more.py
