[tool.poetry]
name = "kalinka-printer"
version = "0.1.0"
description = ""
authors = ["Bartosz Deptuła <barti.deptula@gmail.com>"]
readme = "README.md"
packages = [{include = "kalinka_printer"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
psycopg2 = "^2.9.5"
cloudmersive-convert-api-client = "^3.2.5"
setuptools = "^66.1.1"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
